--- a/.github/workflows/build-book.yaml
+++ b/.github/workflows/build-book.yaml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Build site
         run: |
+         install.packages("remotes")
          remotes::install_github("rstudio/bslib")
          install.packages("downlit")
          bookdown::render_book("index.Rmd", quiet = TRUE)
