--- a/_output.yml
+++ b/_output.yml
@@ -1,5 +1,5 @@
 bookdown::bs4_book:
   css: [css/wtf-teach.css]
   theme:
-    primary: "#3D6595"
+    primary: "#5286C2"
   repo: https://github.com/rstudio-education/wtf-teach-rstudio-global/
