--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -21,7 +21,9 @@ rmd_files: [
   "07-speak.Rmd",
   "08-diversity.Rmd",
   "09-creativity.Rmd",
-  "10-discover.Rmd"
+  "10-discover.Rmd",
+
+  "11-references.Rmd"
   ]
 
 new_session: yes
