--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ _bookdown_files
 *.key
 rsconnect/
 *.mov
-Getting to know you - 2021 Diversity Scholars (Responses) - Form Responses 1
+Getting to know you - 2021 Diversity Scholars (Responses) - Form Responses 1.csv
